--- a/C++11_XLib/C++11_XLib/makefile
+++ b/C++11_XLib/C++11_XLib/makefile
@@ -5,6 +5,7 @@ F_TYPE =cpp
 CXX = g++
 CXX_LIBS = -lpthread
 CXX_TAGS = -std=c++11
+
 #define sh cmd
 TARGET = xlib
 MKDIR = mkdir
@@ -13,6 +14,7 @@ RM_RF = rm -rf
 MV = mv 
 
 #定义路径
+DIR_FLAG = /
 DIR = $(shell pwd)
 SRC_DIR = $(DIR)
 OBJ_DIR = $(DIR)/obj
@@ -26,19 +28,18 @@ endef
 ALL_FILES := $(call walk, $(SRC_DIR))
 SRCS:=$(filter %.$(F_TYPE),$(ALL_FILES))
 OBJS:=$(patsubst %.$(F_TYPE),%.o,$(SRCS))
-#OBJS:=$(patsubst %.$(F_TYPE),$(OBJ_DIR)/%.o,$(notdir $(SRCS)))
-#OBJS_PRE:=$(subprefix $(SRC_DIR),$(OBJS))
-all:$(TARGET) $(DIRS) 
-
-$(DIRS):
-	@$(MKDIR) $(DIRS) 
+#OBJS=$(patsubst %.$(F_TYPE),$(OBJ_DIR)$(DIR_FLAG)%.o,$(notdir $(SRCS)))
+all:$(TARGET)
+	@echo "build successed!"
 $(TARGET):$(OBJS)
 	@$(CXX) -o $@ $^ $(CXX_TAGS) $(CXX_LIBS)
 %.o:%.$(F_TYPE)
-	$(CXX) -c -o $@ $< $(CXX_TAGS) $(CXX_LIBS)
-.PHONY:clean
+	@[ -d $(DIRS) ]||$(MKDIR) $(DIRS) 
+	@$(CXX) -c -o $@ $< $(CXX_TAGS) $(CXX_LIBS)
+	@$(CXX) -c -o $(OBJ_DIR)$(DIR_FLAG)$(notdir $@)  $< $(CXX_TAGS) $(CXX_LIBS)
+	@echo $(notdir $<) ': compiled to======>' $(notdir $@)
 clean:
 	@$(RM) $(TARGET) $(OBJS) && $(RM_RF) $(DIRS)
-.PHONY:clean-o
-clean-o:
+cleanobj:
 	@$(RM) $(OBJS)
+.PHONY:all clean cleanobj
