--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
     - if [ "${CXX}" == "clang++" ]; then export CXX="clang++-3.2" CC="clang-3.2"; fi
 
     - if [ "${CXX}" == "clang++" ]; then sudo apt-get -qq install clang-3.2; fi
-    - sudo apt-get install g++-4.8;
+#    - sudo apt-get install g++-4.8;
 script:
     - make clean&&make&&./xlib
 compiler:
