--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 language: cpp
 sudo: required
 
-#install:
-#    - ./xlib
-#before_script:
-#    - if [ "${CXX}" == "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-#    - if [ "${CXX}" == "clang++" ]; then export CXX="clang++-3.2" CC="clang-3.2"; fi
-#
-#    - if [ "${CXX}" == "clang++" ]; then sudo apt-get -qq install clang-3.2; fi
-#    - sudo apt-get install g++-4.8;
+install:
+
+ - make -f shCXX
+
 script:
-    - make clean&&make&&./xlib
+    - if [ "$CXX" = "g++" ]; then g++ --version; fi
+    - if [ "$CXX" != "g++" ]; then clang++ --version; fi
+    - make clean
+    - make
+    - ./xlib
 compiler:
-- clang
+- clang++
 - g++
 os:
-#- linux
+- linux
 - osx
 branches:
  only:
