fix build lpthread to pthread

--- a/makefile-release
+++ b/makefile-release
@@ -8,7 +8,7 @@ AR = ar
 SRC_EXT = cpp
 
 CXX ?= g++
-CXX_LIBS = -lpthread
+CXX_LIBS = -pthread
 CXX_TAGS = -std=c++11 -Wall -Wextra -g
 R_TAGS = -D NDEBUG
 D_TAGS = -D DEBUG
