调整目录结构

--- a/makefile-release
+++ b/makefile-release
@@ -25,10 +25,11 @@ print-%:
 #定义路径
 DIR_EXT = /
 DIR = .
-SRC_PATH = $(DIR)/src
+SRC_PATH = $(DIR)
 OBJ_PATH = $(DIR)/obj
 DIRS = $(OBJ_PATH)
-INCLUDES = -I $(SRC_PATH)
+INCLUDES_CXX = -I $(SRC_PATH)/src
+INCLUDES_H = -I $(SRC_PATH)/include
 #define system
 UNAME_S:=$(shell uname -s)
 rwildcard = $(foreach d, $(wildcard $1*), $(call rwildcard,$d/,$2) \
@@ -79,7 +80,7 @@ $(OBJ_PATH)/%.o:$(SRC_PATH)%.$(SRC_EXT)
 	@$(MKDIR) $(dir $(OBJS))
 	@echo 'Compiling: $< --> $@' 
 	@$(START_TIME)
-	@$(CXX) $(CXX_TAGS) $(CXX_LIBS) $(INCLUDES) -MP -MMD -c -o $@ $^
+	@$(CXX) $(CXX_TAGS) $(CXX_LIBS) $(INCLUDES_CXX) $(INCLUDES_H) -MP -MMD -c -o $@ $^
 	@echo -en 'Compile time: '
 	@$(END_TIME)
 clean:
