--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: cpp
 sudo: required
 services:
-        - docker
+    # - docker
 before_install:
-    - docker build -t xlib-test .
+    # - docker build -t xlib-test .
 install:
     - make -f shCXX
 script:
-    - docker run -i -t xlib-test
+    # - docker run -i -t xlib-test
     - if [ "$CXX" = "g++" ]; then g++ --version; fi
     - if [ "$CXX" != "g++" ]; then clang++ --version; fi
     - make clean
