fix add Fraction

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1,76 +1,9 @@
+import("sources.gn")
 # 测试
 executable("test_main") {
     include_dirs = [
         "include"
     ]
-    sources = [
-      "main.cpp",
-      "include/xlib.h",
-      "include/crypto/base64.h",
-      "include/crypto/md5.h",
-      "include/crypto/url.h",
-      "include/crypto/base85.h",
-      "include/crypto/sha1.h",
-      "include/net/XEpoll.h",
-      "include/net/http.h",
-      "include/net/XSocket.h",
-      "include/net/netconfig.h",
-      "include/memory/StackAlloc.h",
-      "include/memory/xallocator.h",
-      "include/algorithm/AStar.h",
-      "include/algorithm/dlx.h",
-      "include/algorithm/sort.h",
-      "include/algorithm/search.h",
-      "include/parser/SgfParser.h",
-      "include/parser/xml.h",
-      "include/parser/json.h",
-      "include/parser/YamlParser.h",
-      "include/math/SubmatrixGenerator.h",
-      "include/math/matrix.h",
-      "include/math/util.h",
-      "include/math/math.h",
-      "include/macro/XDefine.h",
-      "include/macro/xplatform.h",
-      "include/macro/XBase.h",
-      "include/macro/XBinary.h",
-      "include/base/XRegex.h",
-      "include/base/XUtf8.h",
-      "include/base/XRegist.h",
-      "include/base/XLog.h",
-      "include/base/Serializer.h",
-      "include/base/XThread.h",
-      "include/base/XTime.h",
-      "include/base/XFileUtil.h",
-      "include/base/XString.h",
-      "include/base/XRandom.h",
-      "include/diff/patch.h",
-      "src/crypto/md5.cpp",
-      "src/crypto/base64.cpp",
-      "src/crypto/url.cpp",
-      "src/crypto/sha1.cpp",
-      "src/crypto/base85.cpp",
-      "src/net/XEpoll.cpp",
-      "src/net/XSocket.cpp",
-      "src/algorithm/sort.cpp",
-      "src/algorithm/search.cpp",
-      "src/algorithm/dlx.cpp",
-      "src/algorithm/AStar.cpp",
-      "src/parser/SgfParser.cpp",
-      "src/parser/YamlParser.cpp",
-      "src/parser/xml.cpp",
-      "src/parser/json.cpp",
-      "src/math/util.cpp",
-      "src/math/SubmatrixGenerator.cpp",
-      "src/math/matrix.cpp",
-      "src/base/XRegex.cpp",
-      "src/base/XLog.cpp",
-      "src/base/XThread.cpp",
-      "src/base/XString.cpp",
-      "src/base/XFileUtil.cpp",
-      "src/base/XUtf8.cpp",
-      "src/base/XRandom.cpp",
-      "src/base/XTime.cpp",
-      "src/diff/patch.cpp",
-    ]
+    sources = xlib_source # 引用 sources.gn 中定义的变量
 }
 
